# mrid

./: README.md  common HD-BET issues.md  pyproject.toml
src/mrid/: __init__.py  _utils.py  loader.py  study.py
src/mrid/postprocessing/: seg_volumes.py
src/mrid/preprocessing/: __init__.py  bias_field_correction.py  cropping.py  dicom_fixer.py  dicom_stl_to_nifti.py  dicom_to_nifti.py  registration.py  skullstripping.py
src/mrid/preprocessing/SRI24/: __init__.py
src/mrid/training/: mri_slicer.py
