[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrid"
description = "MRI tools for making datasets and machine learning applications."

version = "999999999"
dependencies = [
  "numpy",
]
requires-python = ">= 3.12"
readme = "README.md"
authors = [
  {name = "Ivan Nikishev", email = "nkshv2@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["MRI"]


[project.urls]
# Homepage = "https://github.com/inikishev/optforge"
# Repository = "https://github.com/inikishev/optforge"
# Issues = "https://github.com/inikishev/optforge/isses"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]